baj/test/error/Init.mj
class Program {
    static int [j] a;       // ERROR: j is declared after this declaration
    static final int j=10;
}
